# Cadence

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/mobile/: .env.example  .gitignore  app.config.ts  eas.json  metro.config.js  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  sign-in.tsx
apps/mobile/components/: ActionSheet.tsx  AddTaskBar.tsx  AppBar.tsx  ArchivedRoutineRow.tsx  DatePickerModal.tsx  DayNav.tsx  DrawerContent.tsx  GoalActionButtons.tsx  GoalCard.tsx  GoalChipsField.tsx  GoalDailyTracking.tsx  GoalDetailModal.tsx  GoalFormModal.tsx  HistoryDayModal.tsx  InsightShared.tsx  ProductivityCharts.tsx  ProductivityTile.tsx  RangePickerSheet.tsx  ReflectionCard.tsx  ReflectionEditor.tsx  RoutineFormModal.tsx  RoutineInsightCharts.tsx  RoutineItem.tsx  RoutineRow.tsx  SchedulePicker.tsx  SimpleLineChart.tsx  StagedTaskDestinationPills.tsx  StagedTaskFormModal.tsx  StagedTaskItem.tsx  StagedTaskScheduleModal.tsx  TaskInsightCharts.tsx  TaskItem.tsx  TodayRoutinesSection.tsx  TodayStats.tsx  TodayTasksSection.tsx
apps/mobile/lib/: colors.ts  (+4 more)
apps/tray/: .env.example  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/tray/src-tauri/: Cargo.toml  tauri.conf.json
apps/tray/src-tauri/capabilities/: default.json
apps/tray/src-tauri/icons/: icon.icns
apps/tray/src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs  setup.rs  tray.rs
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json
docs/: AUTHENTICATION.md  DEPLOYMENT.md
(+92 files in other folders)
