[package]
name = "cadence-tray"
version = "0.1.0"
description = "Cadence system tray app"
authors = []
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
default-run = "cadence-tray"

[lib]
name = "cadence_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cadence-tray"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
# cookie v0.18.1 (transitive via tauri) breaks with time >= 0.3.52 (parse API changed)
time = "=0.3.51"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
